--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body{
 input{
     outline: none;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 .header{
     width: 100%;
     position: relative;
